fized gauge to horozontally align itself and a NAN bug for classes with no reviews

--- a/imports/ui/css/Gauge.css
+++ b/imports/ui/css/Gauge.css
@@ -1,9 +1,12 @@
 .gauge-text {
   text-align: center;
-  margin: 0 0 0 0;
+  margin: 0;
   width: 100%;
 }
 
+.h-align{
+  text-align: center;
+}
 .gauge-bottom-text {
   text-align: center;
   margin: 0;
@@ -15,7 +18,8 @@
 }
 
 .gauge-center {
-  margin-left: 25%;
+  /*margin-left: 25%;*/
+  display: inline-block;
 }
 
 .gauge-container {
